package org.narrative.shared.event.reputation;

public enum DecisionEnum {
    ACCEPTED,
    REJECTED;
}
